...
    }
}

private extension ProfileViewController {
    func showExitAlert() {
            let model = AlertModel(
                title: "Пока, пока!",
                message: "Уверены что хотите выйти?",
                firstButtonText: "Да",
                secondButtonText: "Нет",
                firstButtonCompletion: { [weak self] in
                    guard let self else { return }
                    OAuth2TokenStorage.shared.removeToken()
                    Helpers.cleanCoockies()
                    self.switchToSplashViewController()
...
